--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
 
 .main-article__image {
     position: absolute;
-    width: 100%;
+    width: 50%; /*width: 100%;*/
     height: 100%;
     object-fit: cover;
 }
