--- a/src/common.css
+++ b/src/common.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700;900&display=swap');
+
 :root {
     --color-primary: #2E3D45;
     --color-accent: #F57B0B;
